change css class for using variable primary colour

--- a/src/global.scss
+++ b/src/global.scss
@@ -60,50 +60,6 @@ div.select-text {
   height: auto !important;
 }
 
-.datatable-header-cell-template-wrap {
-  text-align: center !important;
-}
-
-.datatable-body-cell-label {
-  text-align: center !important;
-}
-
-.temperaturaCell {
-  background-color: rgba(255, 217, 0, 0.116);
-}
-
-.temperaturaCellMin {
-  background-color: rgba(255, 217, 0, 0.224);
-}
-
-.temperaturaCellMax {
-  background-color: rgba(255, 217, 0, 0.422);
-}
-
-.humedadCell {
-  background-color: rgba(0, 204, 255, 0.116);
-}
-
-.humedadCellMin {
-  background-color: rgba(0, 204, 255, 0.224);
-}
-
-.humedadCellMax {
-  background-color: rgba(0, 204, 255, 0.422);
-}
-
-.vientoCell {
-  background-color: rgba(51, 255, 0, 0.116);
-}
-
-.vientoCellMin {
-  background-color: rgba(51, 255, 0, 0.224);
-}
-
-.vientoCellMax {
-  background-color: rgba(51, 255, 0, 0.422);
-}
-
 .ngx-datatable .datatable-footer {
   position: absolute;
   top: 0;
@@ -323,7 +279,7 @@ ion-select::part(icon) {
 }
 
 .mat-row:hover {
-  background-color: rgb(180, 180, 92);
+  background-color: var(--ion-color-primary);
 }
 
 h4 {
@@ -586,7 +542,7 @@ ion-item {
   --background: rgba(255, 255, 255, 0);
   margin-bottom: 3px;
   font-size: 14px;
-  --highlight-color-valid: rgb(180, 180, 92);
+  --highlight-color-valid: var(--ion-color-primary:);
 }
 
 ion-item.item-has-focus>ion-label {
@@ -643,7 +599,7 @@ ion-note {
   /*change color of label*/
   //color: green !important;
   font-weight: 500;
-  color: rgb(180, 180, 92) !important;
+  color: var(--ion-color-primary) !important;
 }
 
 .mat-form-field-underline {
@@ -653,12 +609,12 @@ ion-note {
 
 .mat-form-field-ripple {
   /*change color of underline when focused*/
-  background-color: rgb(180, 180, 92) !important;
+  background-color: var(--ion-color-primary) !important;
 }
 
 .mat-option.mat-active {
   font-weight: 600;
-  color: rgb(180, 180, 92) !important;
+  color: var(--ion-color-primary) !important;
 }
 
 // text-overflow ion-select
